added empty links to friend list and github repo

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,9 +1,11 @@
 .jumbotron {
-    background: mediumslateblue;
-    color: aliceblue;
+    background: burlywood;
+    color: firebrick;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .btn {
-    background: aliceblue;
-    color: mediumslateblue;
+    background: firebrick;
+    color: #ffffff;
 }
